fixed burger alignment

--- a/mobile_class.css
+++ b/mobile_class.css
@@ -101,7 +101,7 @@
     .burger{
         margin-top: auto;
         margin-bottom: auto;
-        margin-top: 4vw;
+        /* margin-top: 4vw; */
         margin-right: 7vw;
         display: block;
         cursor: pointer;
